Fix css styling where portfolio table and header were not top aligned

--- a/FomoApp/ClientApp/src/features/portfolio/PortfolioPage.css
+++ b/FomoApp/ClientApp/src/features/portfolio/PortfolioPage.css
@@ -5,14 +5,10 @@
     min-height: 100%;
     display: grid;
     grid-template-columns: repeat(16, [col-start] 1fr);
-    grid-template-rows: max-content max-content max-content max-content;
+    grid-template-rows: min-content min-content max-content max-content;
 }
 
-#portfolio-footer{
-    grid-row: 4;
-    grid-column: col-start 1 / span 16;
-    min-height: 5rem;
-}
+
 
 #portfolio-stock-search-container{
     grid-column: 3 / span 5;
@@ -29,7 +25,7 @@
 
 #portfolio-chatbox-container{
     grid-column: 11 / span 3;
-    grid-row: 2 / span 2;
+    grid-row: 2 / span 3;
     height: 40rem;
 }
 
